--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ h1, h2, h3, h4, p {
 }
 
 #gift-img-loveu:hover {
-    background-image: url("/images/dance.webp");
+    background-image: url("/images/iloveyou.webp");
 }
 
 #footer {
